--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "drizzle-orm": "^0.29.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
     "postgres": "^3.4.3",
@@ -18,6 +19,7 @@
     "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
